# amx

./: .gitconfig  .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  function_request.md
amx/: meta.xml  meta.xml~
amx-deps/: amxdeploy.pl  install.html  meta.xml
amx-deps/img/: style.css
amx-deps/src/: .gitignore  CFunctions.cpp  CFunctions.h  Common.h  Makefile  StdInc.h  UTF8.h  king.sln  misc.c  ml_base.cpp  ml_base.h  ml_base.vcxproj  ml_base.vcxproj.filters  pawn.rc  premake5.lua  resource.h  syscalls.cpp  util.cpp  util.h
amx-deps/src/RakNet/MTASA/: Packets.h  SyncStructures.h  bitstream.h  ns_common.h
amx-deps/src/amx/: CMakeLists.txt  amx.c  amx.d  amx.h  amxFloat.rc  amx_exec.c  amx_internal.h  amx_opcodes.h  amx_ptrarray.h  amx_verifier.c  amxargs.c  amxargs.d  amxaux.c  amxaux.d  amxaux.h  amxcons.c  amxcore.c  amxdbg.c  amxdbg.h  amxdgram.c  amxexec.asm  amxexec_arm7.s  amxexec_arm7_gas.s  amxexec_gcc.c  amxexec_thumb2.s  amxexec_thumb2_gas.s  amxexecn.asm  amxfile.c  amxfixed.c  amxfloat.c  amxgc.c  amxjitr.asm  amxjits.asm  amxjitsn.asm  amxpool.c  amxpool.h  amxprocess.c  amxstring.c  amxtime.c  fixed.c  (+7 more)
amx-deps/src/include/: ILuaModuleManager.h  lua.h  luaconf.h  lualib.h  lzio.h
amx-deps/src/lib/: lua5.1.exp  lua5.1.lib  lua5.1_d.exp  lua5.1_d.lib
amx-deps/src/linux/: binreloc.c  sclinux.h
amx-deps/src/natives/: maths.c  misc.c  sqlite.c
amx-deps/src/sha25/: sha256.cpp
amx-deps/src/sqlite/: sqlite_amx.c
amx-fs-test/: testfs.pwn
amx-test/: file.txt  testgm.amx  testgm.pwn
amx-test/pawno/: settings.ini
amx-test/pawno/include/: a_amx.inc  a_players.inc
amx/client/: anim.lua  arrowmarkers.lua  attachtobones.lua  bars.lua  bone_attach_c.lua  bone_pos_rot.lua  client.lua  garages.lua  map_waypoint.lua  mouselook.lua  samp_chatbubbles.lua  samp_nametags.lua  special_actions.lua  util.lua
amx/resources/filterscripts/: testfs.pwn
amx/resources/gamemodes/: testgm.amx  testgm.pwn
amx/resources/pawno/: settings.ini
amx/resources/pawno/include/: a_amx.inc
amx/resources/scriptfiles/properties/: businesses.txt  houses.txt
amx/resources/scriptfiles/vehicles/: flint.txt  ls_airport.txt  ls_gen_inner.txt  ls_gen_outer.txt  ls_law.txt  lv_airport.txt  lv_gen.txt  lv_law.txt  pilots.txt  red_county.txt  sf_airport.txt  sf_gen.txt  sf_law.txt  sf_train.txt  tierra.txt  trains.txt  trains_platform.txt
amx/server/: _triggerqueue.lua  amx.lua  attachtobones.lua  defines.lua  events.lua  rcon.lua  syscalls.lua  triggerqueue.lua  util.lua
amx/server/natives/: a_actors.lua  a_http.lua  a_mta.lua  a_npc.lua  a_objects.lua  a_players.lua  a_samp.lua  a_sampdb.lua  a_vehicles.lua
amx/shared/: anim_define.lua  attach_func.lua  bone_attach.lua  extra_colors.lua  ped_anim.lua  sound_offset.lua  vehicle_info.lua
tests/: test_invariant_util.cpp
